// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board displays 3x3 set of squares 1`] = `
<div>
  <div
    className="board-row"
    key="0"
  >
    <Square
      key="0-0"
      onClick={[Function]}
      value={null}
    />
    <Square
      key="0-1"
      onClick={[Function]}
      value={null}
    />
    <Square
      key="0-2"
      onClick={[Function]}
      value={null}
    />
  </div>
  <div
    className="board-row"
    key="1"
  >
    <Square
      key="1-0"
      onClick={[Function]}
      value={null}
    />
    <Square
      key="1-1"
      onClick={[Function]}
      value={null}
    />
    <Square
      key="1-2"
      onClick={[Function]}
      value={null}
    />
  </div>
  <div
    className="board-row"
    key="2"
  >
    <Square
      key="2-0"
      onClick={[Function]}
      value={null}
    />
    <Square
      key="2-1"
      onClick={[Function]}
      value={null}
    />
    <Square
      key="2-2"
      onClick={[Function]}
      value={null}
    />
  </div>
</div>
`;

exports[`Board passes values of squares to squares 1`] = `
<div>
  <div
    className="board-row"
    key="0"
  >
    <Square
      key="0-0"
      onClick={[Function]}
      value="X"
    />
    <Square
      key="0-1"
      onClick={[Function]}
      value="O"
    />
    <Square
      key="0-2"
      onClick={[Function]}
      value="X"
    />
  </div>
  <div
    className="board-row"
    key="1"
  >
    <Square
      key="1-0"
      onClick={[Function]}
      value="X"
    />
    <Square
      key="1-1"
      onClick={[Function]}
      value="O"
    />
    <Square
      key="1-2"
      onClick={[Function]}
      value="X"
    />
  </div>
  <div
    className="board-row"
    key="2"
  >
    <Square
      key="2-0"
      onClick={[Function]}
      value="O"
    />
    <Square
      key="2-1"
      onClick={[Function]}
      value="X"
    />
    <Square
      key="2-2"
      onClick={[Function]}
      value="O"
    />
  </div>
</div>
`;
